fixed layout issues

--- a/app/assets/stylesheets/pages/_book_show.scss
+++ b/app/assets/stylesheets/pages/_book_show.scss
@@ -430,19 +430,18 @@
   }
 }
 .book__topic {
-  @include span-columns(4);
-  &:nth-of-type(3n) {
-    @include omega();
-  }
+  @include span-columns(4 of 12);
+  @include omega(3n);
+
   @include media($tablet) {
     @include span-columns(6 of 12);
-    &:nth-of-type(2n) {
-      @include omega();
-    }
+    @include omega(2n);
   }
+
   font-weight: bold;
   position: relative;
   z-index: 1;
+
   &:before {
     background-image: image-url('entreprenerd/wave-graph.png');
     z-index: -1;
